# mandelbrot

./: CMakeLists.txt  README.md  format.ps1  run.ps1
.github/workflows/: windows-build.yml
lib/: CMakeLists.txt  mandelbrot.cpp  mandelbrot.hpp  number.hpp  png.cpp  png.hpp
lib/model/: dynamics.cpp  step.cpp
tools/: CMakeLists.txt  driver.cpp
